--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/telegram
 spring.datasource.username=telegram
 spring.datasource.password=telegram123456
+spring.jpa.hibernate.ddl-auto = validate
+
 telegram.bot.token=6249310059:AAEhClbDpzIWAwvsLMzkSB07213tB-DU8Tk
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
